platform/backstage/overlays/techdocs-split-test/patch-deployment-backstage-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-backend
spec:
  template:
    spec:
      containers:
        - name: backstage-backend
          imagePullPolicy: Always
