platform/backstage/overlays/techdocs-split-test/patch-deployment-backstage-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-frontend
spec:
  template:
    spec:
      containers:
        - name: backstage-frontend
          imagePullPolicy: Always
