platform/backstage/overlays/techdocs-split-test/patch-ingress-backstage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
spec:
  rules:
    - host: backstage-techdocs-test.sth.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 80
